--- a/src/app/radio/components/section-about-us/section-about-us.component.html
+++ b/src/app/radio/components/section-about-us/section-about-us.component.html
@@ -6,9 +6,8 @@
         #videoPlayer
         class="object-cover w-full h-full "
         style="border-radius: 150px 70px 150px 70px;"
-        poster="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_video.jpg?alt=media&token=84e48f15-b981-440b-ad1f-f7a05681a61c"
         preload="auto"
-        src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2FVID_20230509_155904.mp4?alt=media&token=961bbb5b-953a-41f9-8c06-b084b4564594"
+        src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2FConoce%20Radio%20UTPL%20-%20Spot.mp4?alt=media&token=a06ca644-5f12-4fa4-b6f3-3ca2d3cade09"
         (click)="this.playVideo(videoPlayer)"
     ></video>
 
@@ -29,7 +28,9 @@
       <p>{{'Radio UTPL' | uppercase}}</p>
     </h1>
 
-    <p class="text-sm text-justify my-5">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
+    <p class="text-sm text-justify my-5">Radio UTPL es un canal de comunicación universitario que tiene como misión principal la creación y difusión de contenidos sonoros de calidad, con un enfoque informativo, pedagógico y experimental. Este espacio se ha consolidado como una plataforma innovadora donde convergen estudiantes, administrativos, docentes e investigadores para proponer, desarrollar y explorar diversas formas de comunicación a través de la radio digital.</p>
+      <p class="text-sm text-justify my-5">Nuestra visión es ser un medio creativo que fomente el aprendizaje práctico y el pensamiento crítico, utilizando las últimas herramientas y tecnologías disponibles. Radio UTPL se destaca por brindar un espacio dinámico y colaborativo que impulsa el desarrollo de habilidades comunicativas, la experimentación con formatos sonoros, y la reflexión sobre los medios de comunicación contemporáneos.
+    </p>
 
     <div class="px-5 py-2">
       <a routerLink="../quienes-somos" class="px-5 py-2 bg-yellow-utpl font-semibold text-xs text-blue-utpl  rounded-3xl border-blue-utpl border-2 shadow-md hover:bg-blue-utpl hover:text-white">
