--- a/src/app/radio/pages/about-us-page/about-us-page.component.html
+++ b/src/app/radio/pages/about-us-page/about-us-page.component.html
@@ -10,14 +10,16 @@
         <P>HISTORIA</P>
       </h2>
 
-      <p class="my-6">"LA VERDADERA COMUNICACIÓN, ES LA QUE SE VIVE Y SE HACE A DIARIO"</p>
-
-      <p class="text-sm">Radio UTPL fue creada para que los estudiantes de la Modalidad a Distancia y Modalidad Presencial tengan un acercamiento con sus mentores y catedráticos.</p>
+      <p class="text-sm text-center my-5">Historia de Radio UTPL: Un Espacio de Innovación y Compromiso Educativo</p>
+      <p class="text-sm text-justify my-5">La Universidad Técnica Particular de Loja (UTPL) se ha destacado como un referente de innovación y compromiso en los campos de la comunicación y la educación. A lo largo de los años, ha sabido adaptarse a las demandas cambiantes de la sociedad, ofreciendo oportunidades de aprendizaje y desarrollo tanto para sus estudiantes como para la comunidad en general.</p>
+      <p class="text-sm text-justify my-5">Dentro de los múltiples proyectos impulsados por la UTPL para fomentar la educación y la comunicación, uno de los más emblemáticos es Radio UTPL. Inicialmente concebida como un laboratorio para los estudiantes de la carrera de Comunicación, esta emisora ha evolucionado hasta convertirse en un canal de comunicación universitario reconocido por su capacidad para generar productos sonoros informativos, pedagógicos y experimentales.</p>
+      <p class="text-sm text-justify my-5">Radio UTPL ofrece a estudiantes, docentes, administrativos e investigadores la posibilidad de proponer, crear y explorar diversas formas de comunicación a través de la radio digital. Gracias a las herramientas y tecnologías avanzadas con las que cuenta, este espacio no solo enriquece el entorno universitario, sino también la comunidad local, proporcionando contenidos de alta calidad y relevancia.</p>
+      <p class="text-sm text-justify my-5">Hoy en día, Radio UTPL se ha consolidado como un medio que no solo sirve para el aprendizaje práctico de los estudiantes, sino que también contribuye significativamente al desarrollo cultural y educativo. Su impacto perdurable refleja el compromiso de la UTPL con la innovación y la excelencia en la comunicación.</p>
     </div>
 
     <div class="col-span-1 flex justify-center select-none">
       <img
-        class="rounded-3xl w-[40%] shadow-md"
+        class="rounded-3xl w-[70%] shadow-md"
         src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_3.jpg?alt=media&token=30420398-a700-495a-8d41-8f266437a2ef"
         alt="Image Radio"
       >
