--- a/src/app/radio/pages/projects-page/projects-page.component.html
+++ b/src/app/radio/pages/projects-page/projects-page.component.html
@@ -19,7 +19,7 @@
       </div>
 
       <!-- paginacion -->
-      <radio-pagination path='project' (projectEmitter)="this.getDocs($event)"></radio-pagination>
+      <shared-pagination path='project' (projectEmitter)="this.getDocs($event)"></shared-pagination>
     </div>
 
   </div>
