--- a/src/app/radio/components/section-schedule/section-schedule.component.html
+++ b/src/app/radio/components/section-schedule/section-schedule.component.html
@@ -1,4 +1,4 @@
-<div class="w-full max-w-8xl mx-auto">
+<!-- <div class="w-full max-w-8xl mx-auto">
   <div class="relative pb-[35%] h-0">
     <iframe
       title="Planificación Agenda Akihabara"
@@ -11,5 +11,17 @@
       scrolling="yes"
       allownetworking="all">
     </iframe>
+  </div>
+</div> -->
+
+<div class="w-full max-w-8xl mx-auto">
+  <div class="flex justify-center items-center min-h-500px">
+    <div style="position: relative; width: 800px; height: 450px; /* Ajustar dimensiones */
+      box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin: auto; overflow: hidden;
+      border-radius: 8px; will-change: transform;">
+      <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0;"
+        src="https://www.canva.com/design/DAGVJX1IXdg/eBxiWt33IBc_YS19Ibha3w/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+      </iframe>
+    </div>
   </div>
 </div>
