--- a/src/app/radio/pages/schedule-page/schedule-page.component.html
+++ b/src/app/radio/pages/schedule-page/schedule-page.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <!-- Seccion de listado de podcast -->
-<div class="w-full" *ngIf="this.podcasts.length > 0">
+<div class="w-full" *ngIf="this.podcasts">
   <div class="w-[90%] mx-auto my-10">
     <div class="text-center text-blue-utpl">
       <h2 class="text-2xl"><strong>PODCASTS</strong></h2>
@@ -29,41 +29,12 @@
       </div>
     </div>
 
-    <div class="">
-      <div class="grid grid-cols-3">
-
-        <!-- <div class="col-span-1">
-          <iframe
-            style="border-radius:12px"
-            src="https://open.spotify.com/embed/album/2cWBwpqMsDJC1ZUwz813lo?utm_source=generator"
-            width="100%" height="200"
-            frameBorder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-            loading="lazy">
-          </iframe>
-        </div>
-
-
-        <div class="col-span-1">
-          <iframe
-            style="border-radius:12px"
-            [src]="this.safeUrl"
-            width="100%" height="200"
-            frameBorder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-            loading="lazy">
-          </iframe>
-        </div>
-
-        <div class="col-span-1">
-          <div [innerHTML]="this.podcastFrame"></div>
-        </div> -->
+    <div class="w-full">
+      <div class="grid grid-cols-3 mb-10">
 
         <div
           *ngFor="let podcast of podcasts; let i = index"
-          class="col-span-1 w-[90%] mx-auto"
+          class="col-span-1 w-[90%] mx-auto my-3"
         >
           <shared-card-podcast [podcast]="podcast"></shared-card-podcast>
         </div>
@@ -71,7 +42,7 @@
 
 
       <!-- paginacion -->
-      <radio-pagination></radio-pagination>
+      <shared-pagination path='podcast' [numberDocsShow]=9 (podcastEmitter)="this.getPodcast($event)"></shared-pagination>
     </div>
   </div>
 </div>
