--- a/src/app/shared/components/card-project/card-projects.component.html
+++ b/src/app/shared/components/card-project/card-projects.component.html
@@ -12,9 +12,9 @@
 
   <!-- Contenido -->
   <div class="mb-10 text-sm">
-    <p class="font-semibold text-yellow-utpl mb-3"> Sunday, 1 </p>
+    <p class="font-semibold text-yellow-utpl mb-3"> {{this.date}} </p>
 
-    <p class="text-blue-utpl">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.</p>
+    <p class="text-blue-utpl">{{this.project.summary}}</p>
   </div>
 
   <!-- Enlace para redireccionar -->
