Actualizacion de prueba de frontend.

--- a/src/app/admin/pages/new-podcast/new-podcast.component.html
+++ b/src/app/admin/pages/new-podcast/new-podcast.component.html
@@ -45,8 +45,7 @@
         </div>
 
         <input type="text" formControlName="title"
-          class="w-full h-[33px] px-3 border-2 border-[#C4C4C4] rounded-md"
-        >
+          class="w-full h-[33px] px-3 border-2 border-[#C4C4C4] rounded-md">
       </div>
 
       <!-- Seccion Iframe -->
