--- a/src/app/admin/pages/layout-page/layout-page.component.html
+++ b/src/app/admin/pages/layout-page/layout-page.component.html
@@ -4,7 +4,7 @@
   <div class="w-[90%] mx-auto py-8">
 
     <!-- Opciones de enlace -->
-    <div class="w-[80%] h-[70px] mx-auto px-[10%] flex justify-between items-center font-bold text-xl text-white rounded-full bg-gradient-to-r from-[#F29F05] to-[#FAB300]">
+    <div class="w-[80%] h-[50px] md:h-[70px] mx-auto px-[10%] flex justify-between items-center font-bold text-title-2 text-white rounded-full bg-gradient-to-r from-[#F29F05] to-[#FAB300]">
         <a href="" routerLink="./lista-podcasts"
           (click)="updateButtonLabel('podcast')"
           class="hover:text-blue-utpl"
