--- a/src/app/radio/pages/about-us-page/about-us-page.component.html
+++ b/src/app/radio/pages/about-us-page/about-us-page.component.html
@@ -3,23 +3,23 @@
   <radio-section-about-us></radio-section-about-us>
 
   <!-- Seccion nuestra historia -->
-  <article class="bg-blue-utpl grid grid-cols-2 py-16 px-40 text-white items-center bg-[url('/radio_media/background_aboutUS.svg')] bg-cover">
-    <div class="col-span-1  flex-col text-center p-8">
+  <article class="bg-blue-utpl grid grid-cols-2  px-[3%] py-3 text-white items-center bg-[url('/radio_media/background_aboutUS.svg')] bg-cover">
+    <div class="col-span-1 text-content-2 flex-col text-center">
       <h2 class="text-2xl">
         <p><strong>NUESTRA</strong></p>
         <P>HISTORIA</P>
       </h2>
 
-      <p class="text-sm text-center my-5">Historia de Radio UTPL: Un Espacio de Innovación y Compromiso Educativo</p>
-      <p class="text-sm text-justify my-5">La Universidad Técnica Particular de Loja (UTPL) se ha destacado como un referente de innovación y compromiso en los campos de la comunicación y la educación. A lo largo de los años, ha sabido adaptarse a las demandas cambiantes de la sociedad, ofreciendo oportunidades de aprendizaje y desarrollo tanto para sus estudiantes como para la comunidad en general.</p>
-      <p class="text-sm text-justify my-5">Dentro de los múltiples proyectos impulsados por la UTPL para fomentar la educación y la comunicación, uno de los más emblemáticos es Radio UTPL. Inicialmente concebida como un laboratorio para los estudiantes de la carrera de Comunicación, esta emisora ha evolucionado hasta convertirse en un canal de comunicación universitario reconocido por su capacidad para generar productos sonoros informativos, pedagógicos y experimentales.</p>
-      <p class="text-sm text-justify my-5">Radio UTPL ofrece a estudiantes, docentes, administrativos e investigadores la posibilidad de proponer, crear y explorar diversas formas de comunicación a través de la radio digital. Gracias a las herramientas y tecnologías avanzadas con las que cuenta, este espacio no solo enriquece el entorno universitario, sino también la comunidad local, proporcionando contenidos de alta calidad y relevancia.</p>
-      <p class="text-sm text-justify my-5">Hoy en día, Radio UTPL se ha consolidado como un medio que no solo sirve para el aprendizaje práctico de los estudiantes, sino que también contribuye significativamente al desarrollo cultural y educativo. Su impacto perdurable refleja el compromiso de la UTPL con la innovación y la excelencia en la comunicación.</p>
+      <p class="text-center my-5">Historia de Radio UTPL: Un Espacio de Innovación y Compromiso Educativo</p>
+      <p class="text-justify my-5">La Universidad Técnica Particular de Loja (UTPL) se ha destacado como un referente de innovación y compromiso en los campos de la comunicación y la educación. A lo largo de los años, ha sabido adaptarse a las demandas cambiantes de la sociedad, ofreciendo oportunidades de aprendizaje y desarrollo tanto para sus estudiantes como para la comunidad en general.</p>
+      <p class="text-justify my-5">Dentro de los múltiples proyectos impulsados por la UTPL para fomentar la educación y la comunicación, uno de los más emblemáticos es Radio UTPL. Inicialmente concebida como un laboratorio para los estudiantes de la carrera de Comunicación, esta emisora ha evolucionado hasta convertirse en un canal de comunicación universitario reconocido por su capacidad para generar productos sonoros informativos, pedagógicos y experimentales.</p>
+      <p class="text-justify my-5">Radio UTPL ofrece a estudiantes, docentes, administrativos e investigadores la posibilidad de proponer, crear y explorar diversas formas de comunicación a través de la radio digital. Gracias a las herramientas y tecnologías avanzadas con las que cuenta, este espacio no solo enriquece el entorno universitario, sino también la comunidad local, proporcionando contenidos de alta calidad y relevancia.</p>
+      <p class="text-justify my-5">Hoy en día, Radio UTPL se ha consolidado como un medio que no solo sirve para el aprendizaje práctico de los estudiantes, sino que también contribuye significativamente al desarrollo cultural y educativo. Su impacto perdurable refleja el compromiso de la UTPL con la innovación y la excelencia en la comunicación.</p>
     </div>
 
-    <div class="col-span-1 flex justify-center select-none">
+    <div class="col-span-1 select-none">
       <img
-        class="rounded-3xl w-[70%] shadow-md"
+        class="w-[80%] lg:w-[60%] mx-auto rounded-3xl shadow-md"
         src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_3.jpg?alt=media&token=30420398-a700-495a-8d41-8f266437a2ef"
         alt="Image Radio"
       >
@@ -28,17 +28,17 @@
   </article>
 
   <!-- Seccion Equipo -->
-  <div class="w-full bg-white flex-col py-16 px-32">
+  <div class="w-full px-[5%] bg-white flex-col ">
 
-    <div class="relative h-[180px]">
-      <div class="w-full h-[100px] rounded-full bg-blue-100 bg-[center] bg-[url('https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_video.jpg?alt=media&token=84e48f15-b981-440b-ad1f-f7a05681a61c')]">
+    <div class="relative h-[130px] sm:h-[180px] my-3 md:my-14">
+      <div class="w-full h-[75px] sm:h-[100px] rounded-full bg-blue-100 bg-[center] bg-[url('https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_video.jpg?alt=media&token=84e48f15-b981-440b-ad1f-f7a05681a61c')]">
         <div class="w-full h-full rounded-full flex justify-center items-center bg-blue-utpl bg-opacity-50">
-          <h2 class="text-[36px] font-bold text-white">EQUIPO</h2>
+          <h2 class="text-title-1 font-bold text-white">EQUIPO</h2>
         </div>
       </div>
 
       <div class="absolute w-full flex justify-center bottom-0">
-        <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg  class="w-[75px] h-[75px] sm:w-[100px] sm:h-[100px]" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="50" cy="50" r="50" fill="#FCBD31" fill-opacity="0.28"/>
           <circle cx="50" cy="50" r="35" fill="#FCBD31"/>
           <path d="M37.5 45L50 57.5L62.5 45" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -48,28 +48,26 @@
 
     <div class="grid grid-cols-4">
       <div *ngFor="let member of mediaTeamMediaLab; let i = index"
-        class="col-span-1 flex justify-center">
+      [ngClass]="{'col-span-2': i<=2, 'col-span-4': i>2}">
 
-        <!-- Div padre para dar ancho y altura " -->
-        <div
-          [ngClass]="{'mt-10': (i % 2) != 0}"
-          class="relative flex justify-center w-full h-[450px]"
-          >
-
-          <div class="relative w-[70%] h-full text-sm text-center py-2 px-4"
-            [ngClass]="{'borderGradientTop':(i % 2) != 0, 'borderGradientBotoom':(i % 2) == 0}">
+        <div class="w-[50%] lg:w-[45%] mx-auto h-full flex flex-col justify-between text-center border-2 sm:border-4 md:border-8"
+        [ngClass]="{'borderGradientTop':(i % 2) != 0, 'borderGradientBotoom':(i % 2) == 0, }">
+          <div class="text-content-2 my-3">
             <p><strong>{{member.title}}</strong></p>
             <p>{{member.description}}</p>
           </div>
 
-          <div class="absolute w-full h-full flex items-end justify-center pb-[10px] select-none">
+          <div class="w-full select-none">
             <img
-              class="w-[75%]"
+              class="w-full"
               src="https://www.careerguide.com/career/wp-content/uploads/2023/01/professional-girl-png-6-e1673264164542.png" alt=""
             >
           </div>
-
         </div>
+
+
+        <!-- Div padre para dar ancho y altura [ngClass]="{'mt-10': (i % 2) != 0}"" -->
+
 
       </div>
     </div>
