--- a/src/app/radio/pages/layout-page/layout-page.component.html
+++ b/src/app/radio/pages/layout-page/layout-page.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div
-      class="absolute w-full text-4xl text-white"
+      class="absolute w-full text-4xl text-white text-title-1"
       [ngClass]="{'text-center bottom-20 h-auto':!this.router.url.includes('admin'),
                   'flex items-center justify-center h-full':this.router.url.includes('admin')}"
     >
