--- a/src/app/radio/components/carousel/carousel.component.html
+++ b/src/app/radio/components/carousel/carousel.component.html
@@ -8,8 +8,8 @@
 
 
       <div class="absolute flex-col inset-0 flex items-center justify-center text-center">
-        <div *ngIf="item.title" class="sm:w-[550px]">
-          <h2 class="text-yellow-utpl text-2xl md:text-4xl font-bold tracking-wider">{{ item.title | uppercase}}</h2>
+        <div *ngIf="item.title" class="mx-[15%]">
+          <h2 class="text-yellow-utpl text-title-1 font-bold tracking-wider">{{ item.title | uppercase}}</h2>
         </div>
 
         <div *ngIf="item.linkContent" class="px-5 py-2 mt-10">
