--- a/src/app/radio/components/footer/footer.component.html
+++ b/src/app/radio/components/footer/footer.component.html
@@ -1,21 +1,21 @@
 <footer class="flex flex-col items-center bg-blue-utpl text-white p-3">
-  <div class="w-[80%]">
+  <div class="w-[90%]">
 
     <div class="w-full flex justify-between text-xs p-3">
 
-        <!-- Logo -->
+        <!-- Logo h-20 w-25 -->
         <div class="flex items-center justify-center" >
           <img
             src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Flogo_escudo_utpl.png?alt=media&token=1102a03e-4d46-469d-bd02-088b97716bb9" alt="Logo Radio UTPL"
-            class="h-20 w-25"
+            class="h-10 w-15 lg:h-20 lg:w-25"
           >
         </div>
 
         <!-- Vinculos de interes -->
         <div class="text-center md:text-left">
           <div>
-            <h3 class="text-lg text-yellow-utpl font-semibold mb-4">Vínculos de Interés</h3>
-            <ul class="space-y-6">
+            <h3 class="text-content-1 text-yellow-utpl font-semibold mb-4">Vínculos de Interés</h3>
+            <ul class="text-content-2 space-y-2 md:space-y-6">
               <li><a href="#" class="hover:underline">Inicio</a></li>
               <li><a href="#" class="hover:underline">Programación</a></li>
               <li><a href="#" class="hover:underline">Proyectos</a></li>
@@ -26,14 +26,14 @@
         </div>
 
         <div>
-          <span class="block w-[4px] h-[80%] bg-yellow-utpl rounded-full"></span>
+          <span class="block w-[2px] md:w-[4px] h-[80%] bg-yellow-utpl rounded-full"></span>
         </div>
 
 
         <!-- Ubicacnos -->
         <div class="text-center md:text-left">
-          <h3 class="text-lg text-yellow-utpl font-semibold mb-4">Ubícanos</h3>
-          <ul class="space-y-4">
+          <h3 class="text-content-1 text-yellow-utpl font-semibold mb-4">Ubícanos</h3>
+          <ul class="text-content-2 space-y-1 md:space-y-4">
             <li>Campus - San Cayetano Alto.</li>
             <li>Loja - Ecuador</li>
             <li><address class="not-italic">PARIS SYN PRAGA edif. Nro. 2 Segunda planta.</address></li>
@@ -47,13 +47,13 @@
         </div>
 
         <div>
-          <span class="block w-[4px] h-[80%] bg-yellow-utpl rounded-full"></span>
+          <span class="block w-[2px] md:w-[4px] h-[80%] bg-yellow-utpl rounded-full"></span>
         </div>
 
         <!-- Informacion -->
         <div class="text-center md:text-left">
-          <h3 class="text-lg text-yellow-utpl font-semibold mb-4">Información</h3>
-          <ul class="space-y-6">
+          <h3 class="text-content-1 text-yellow-utpl font-semibold mb-4">Información</h3>
+          <ul class="text-content-2 space-y-2 md:space-y-6">
             <li><a href="UTPL" class="hover:underline">UTPL</a></li>
             <li><a href="MEDIALAB" class="hover:underline">MEDIALAB</a></li>
             <li><a href="Carrera Comunicación" class="hover:underline">Carrera Comunicación</a></li>
@@ -65,7 +65,7 @@
     <span class="block w-full h-[1px] my-3 mx-auto bg-yellow-utpl"></span>
 
     <!-- Copyright -->
-    <div class="text-center text-white text-sm py-3">
+    <div class="text-center text-white text-content-2 py-3">
       <p>&copy; BY LIID UTPL</p>
       <p>Políticas de privacidad - Términos y condiciones</p>
     </div>
