--- a/src/app/radio/components/section-about-us/section-about-us.component.html
+++ b/src/app/radio/components/section-about-us/section-about-us.component.html
@@ -1,7 +1,7 @@
 <!-- Informacion sobre Radio UTPL  -->
-<article class="w-[80%] mx-auto flex my-20 justify-between items-center">
+<article class="w-[80%] mx-auto grid grid-rows-1 md:grid-cols-2 space-x-3 lg:space-x-10 space-y-3 my-20 justify-between items-center">
   <!-- Video -->
-  <div class="relative flex justify-center items-center w-[45%] h-[400px]">
+  <div class="relative flex justify-center items-center w-full h-[300px] lg:h-[400px]">
     <video
         #videoPlayer
         class="object-cover w-full h-full "
@@ -22,14 +22,14 @@
   </div>
 
   <!-- Informacion -->
-  <div class="w-[45%]  text-wrap text-blue-utpl" >
+  <div class="w-full text-sm   text-wrap text-blue-utpl" >
     <h1 class="right-0 text-2xl">
       <p><strong>{{'Acerca de' | uppercase}}</strong> </p>
       <p>{{'Radio UTPL' | uppercase}}</p>
     </h1>
 
-    <p class="text-sm text-justify my-5">Radio UTPL es un canal de comunicación universitario que tiene como misión principal la creación y difusión de contenidos sonoros de calidad, con un enfoque informativo, pedagógico y experimental. Este espacio se ha consolidado como una plataforma innovadora donde convergen estudiantes, administrativos, docentes e investigadores para proponer, desarrollar y explorar diversas formas de comunicación a través de la radio digital.</p>
-      <p class="text-sm text-justify my-5">Nuestra visión es ser un medio creativo que fomente el aprendizaje práctico y el pensamiento crítico, utilizando las últimas herramientas y tecnologías disponibles. Radio UTPL se destaca por brindar un espacio dinámico y colaborativo que impulsa el desarrollo de habilidades comunicativas, la experimentación con formatos sonoros, y la reflexión sobre los medios de comunicación contemporáneos.
+    <p class="text-justify my-5">Radio UTPL es un canal de comunicación universitario que tiene como misión principal la creación y difusión de contenidos sonoros de calidad, con un enfoque informativo, pedagógico y experimental. Este espacio se ha consolidado como una plataforma innovadora donde convergen estudiantes, administrativos, docentes e investigadores para proponer, desarrollar y explorar diversas formas de comunicación a través de la radio digital.</p>
+      <p class="text-justify my-5">Nuestra visión es ser un medio creativo que fomente el aprendizaje práctico y el pensamiento crítico, utilizando las últimas herramientas y tecnologías disponibles. Radio UTPL se destaca por brindar un espacio dinámico y colaborativo que impulsa el desarrollo de habilidades comunicativas, la experimentación con formatos sonoros, y la reflexión sobre los medios de comunicación contemporáneos.
     </p>
 
     <div class="px-5 py-2">
