--- a/src/app/radio/pages/schedule-page/schedule-page.component.html
+++ b/src/app/radio/pages/schedule-page/schedule-page.component.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="w-full">
-      <div class="grid grid-cols-3 mb-10">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 mb-10">
 
         <div
           *ngFor="let podcast of podcasts; let i = index"
@@ -42,7 +42,7 @@
 
 
       <!-- paginacion -->
-      <shared-pagination path='podcast' [numberDocsShow]=9 (podcastEmitter)="this.getPodcast($event)"></shared-pagination>
+      <shared-pagination path='podcast' [numberDocsShow]=6 (podcastEmitter)="this.getPodcast($event)"></shared-pagination>
     </div>
   </div>
 </div>
