Actualizacion de frontend de los componentes del modulo radio: header y footer, actualizacion de enlaces.

--- a/src/app/radio/components/footer/footer.component.html
+++ b/src/app/radio/components/footer/footer.component.html
@@ -16,10 +16,9 @@
           <div>
             <h3 class="text-content-1 text-yellow-utpl font-semibold mb-4">Vínculos de Interés</h3>
             <ul class="text-content-2 space-y-2 md:space-y-6">
-              <li><a href="#" class="hover:underline">Inicio</a></li>
-              <li><a href="#" class="hover:underline">Programación</a></li>
-              <li><a href="#" class="hover:underline">Proyectos</a></li>
-              <li><a href="#" class="hover:underline">Podcasts</a></li>
+              <li><a href="radio-utpl/inicio" class="hover:underline">Inicio</a></li>
+              <li><a href="radio-utpl/programacion" class="hover:underline">Programación</a></li>
+              <li><a href="radio-utpl/proyectos" class="hover:underline">Proyectos</a></li>
             </ul>
           </div>
 
@@ -38,10 +37,8 @@
             <li>Loja - Ecuador</li>
             <li><address class="not-italic">PARIS SYN PRAGA edif. Nro. 2 Segunda planta.</address></li>
             <li><p> Teléfono:  3701444 - Ext.2498</p></li>
-            <li>
-              <a href="radio@utpl.edu.ec" class="hover:underline">
-                <p> Correo electronico:  {{'radio@utpl.edu.ec'}}</p>
-              </a>
+            <li class="flex space-x-1">
+               <p>Correo electronico:</p> <p class="hover:underline">{{' radio@utpl.edu.ec'}}</p>
             </li>
           </ul>
         </div>
@@ -54,9 +51,9 @@
         <div class="text-center md:text-left">
           <h3 class="text-content-1 text-yellow-utpl font-semibold mb-4">Información</h3>
           <ul class="text-content-2 space-y-2 md:space-y-6">
-            <li><a href="UTPL" class="hover:underline">UTPL</a></li>
-            <li><a href="MEDIALAB" class="hover:underline">MEDIALAB</a></li>
-            <li><a href="Carrera Comunicación" class="hover:underline">Carrera Comunicación</a></li>
+            <li><a href="https://www.utpl.edu.ec/" target="_blank" class="hover:underline">UTPL</a></li>
+            <li><a href="https://medialab.utpl.edu.ec/" target="_blank" class="hover:underline">MEDIALAB</a></li>
+            <li><a href="https://www.utpl.edu.ec/carreras/comunicacion" target="_blank" class="hover:underline">Carrera Comunicación</a></li>
           </ul>
         </div>
 
