--- a/src/app/radio/components/header/header.component.html
+++ b/src/app/radio/components/header/header.component.html
@@ -4,7 +4,7 @@
   <div class="flex justify-end p-1">
 
     <!-- Logo MediaLab -->
-     <a href="" target="_blank" title="Sitio web MediaLab" class="flex items-center mx-10 text-content-3">
+     <a href="https://medialab.utpl.edu.ec/" target="_blank" title="Sitio web MediaLab" class="flex items-center mx-10 text-content-3">
       <p class="mr-3 text-white">Visítanos también en</p>
       <img src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Flgo_medialab.png?alt=media&token=0975dd1b-433b-4969-a75e-955ed1488afb" class="h-5 w-9" alt="Sitio web MediaLab">
      </a>
