--- a/src/app/radio/components/element-radio/element-radio.component.html
+++ b/src/app/radio/components/element-radio/element-radio.component.html
@@ -83,7 +83,7 @@
         class="absolute top-1/2 left-0 appearance-none h-[3px] w-full"
         />
 
-      <p>Un cafe con Fabiola</p>
+      <p>Escúchanos en vivo</p>
     </div>
   </div>
 </div>
