--- a/src/app/radio/components/footer/footer.component.html
+++ b/src/app/radio/components/footer/footer.component.html
@@ -65,7 +65,7 @@
 
     <!-- Copyright -->
     <div class="text-center text-white text-content-2 py-3">
-      <p>&copy; BY LIID UTPL</p>
+      <p>&copy; BY LiiD UTPL</p>
       <p>Políticas de privacidad - Términos y condiciones</p>
     </div>
   </div>
