--- a/src/app/radio/components/header/header.component.html
+++ b/src/app/radio/components/header/header.component.html
@@ -16,7 +16,7 @@
     <!-- Logo RadioUTPL -->
      <!-- class="lg:ml-32 mb-1" -->
     <div class="col-span-1 grid justify-center" >
-      <img src="radio_media/logo-radioutpl-color.png" alt="Logo Radio UTPL"
+      <img src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Flogo%20radio%20amarillo.png?alt=media&token=741c2a45-d047-4063-8895-44fb9d5e27ed" alt="Logo Radio UTPL"
         class="h-10 w-15  md:h-20 md:w-25"
       >
     </div>
