--- a/src/app/radio/pages/about-us-page/about-us-page.component.html
+++ b/src/app/radio/pages/about-us-page/about-us-page.component.html
@@ -6,8 +6,8 @@
   <article class="bg-blue-utpl grid grid-cols-2  px-[3%] py-3 text-white items-center bg-[url('/radio_media/background_aboutUS.svg')] bg-cover">
     <div class="col-span-1 text-content-2 flex-col text-center">
       <h2 class="text-2xl">
-        <p><strong>NUESTRA</strong></p>
-        <P>HISTORIA</P>
+        <p><strong>NUESTRA HISTORIA</strong></p>
+        <!-- <P>HISTORIA</P> -->
       </h2>
 
       <p class="text-center my-5">Historia de Radio UTPL: Un Espacio de Innovación y Compromiso Educativo</p>
@@ -20,7 +20,7 @@
     <div class="col-span-1 select-none">
       <img
         class="w-[80%] lg:w-[60%] mx-auto rounded-3xl shadow-md"
-        src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_3.jpg?alt=media&token=30420398-a700-495a-8d41-8f266437a2ef"
+        src="https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/carousel_home%2FDSC_3738.jpg?alt=media&token=9c148491-09e2-4c16-8371-eaa403e0796a"
         alt="Image Radio"
       >
     </div>
@@ -31,7 +31,7 @@
   <div class="w-full px-[5%] bg-white flex-col ">
 
     <div class="relative h-[130px] sm:h-[180px] my-3 md:my-14">
-      <div class="w-full h-[75px] sm:h-[100px] rounded-full bg-blue-100 bg-[center] bg-[url('https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/media%2Fimage_video.jpg?alt=media&token=84e48f15-b981-440b-ad1f-f7a05681a61c')]">
+      <div class="w-full h-[75px] sm:h-[100px] rounded-full bg-blue-100 bg-[center] bg-[url('https://firebasestorage.googleapis.com/v0/b/radioutpl.appspot.com/o/carousel_home%2FDSC_3728.jpg?alt=media&token=20f13d60-5880-4008-91f0-63ffa17e736d')]">
         <div class="w-full h-full rounded-full flex justify-center items-center bg-blue-utpl bg-opacity-50">
           <h2 class="text-title-1 font-bold text-white">EQUIPO</h2>
         </div>
@@ -60,7 +60,7 @@
           <div class="w-full select-none">
             <img
               class="w-full"
-              src="https://www.careerguide.com/career/wp-content/uploads/2023/01/professional-girl-png-6-e1673264164542.png" alt=""
+              src="{{member.imgSrc}}" alt=""
             >
           </div>
         </div>
