--- a/src/app/admin/pages/new-project/new-project.component.html
+++ b/src/app/admin/pages/new-project/new-project.component.html
@@ -66,7 +66,7 @@
       <!-- Seccion del Titulo -->
       <div>
         <div class="pb-2 text-wrap">
-          <p class="text-content-1"> <strong>Titulo de referencia </strong><span class="text-content-2 text-[#9D9D9D]">Este título no se visualiza en el podcast, solo es para mantener una organización el el administrador</span></p>
+          <p class="text-content-1"> <strong>Titulo de referencia </strong><span class="text-content-2 text-[#9D9D9D]">Este título no se visualiza en el proyecto, solo es para mantener una organización el el administrador</span></p>
         </div>
 
         <input type="text" formControlName="title"
@@ -77,7 +77,7 @@
       <!-- Seccion de palabras claves -->
       <div class="my-6">
         <div class="pb-2 text-wrap">
-          <p class="text-content-1"> <strong>Palabras claves</strong> </p>
+          <p class="text-content-1"> <strong>Palabras clave</strong> </p>
         </div>
 
         <input type="text" formControlName="keywords"
